section gap bug fixed

--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -44,6 +44,10 @@ html, body {
   padding: 0;
 }
 
+body {
+  background-color: var(--color-beige);
+}
+
 html {
   scroll-padding-top: 100px;
 }
